fixed indicators on mobile view

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -171,4 +171,8 @@ nav {
   #myStory {
     text-align: center;
   }
+
+  #indicators {
+    margin-bottom: -2rem;
+  }
 }
